flask web application

--- a/chapter8_sentiment_analysis.ipynb
+++ b/chapter8_sentiment_analysis.ipynb
@@ -395,6 +395,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "dest = os.path.join('movieclassifier', 'pkl_objects')\n",
+    "if not os.path.exists(dest):\n",
+    "    os.makedirs(dest)\n",
+    "pickle.dump(stop,\n",
+    "            open(os.path.join(dest, 'stopwords.pkl'), 'wb'),\n",
+    "            protocol=4)\n",
+    "pickle.dump(clf,\n",
+    "            open(os.path.join(dest, 'classifier.pkl'), 'wb'),\n",
+    "            protocol=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
